syntax = "proto3";
package figterm;

import "fig.proto";
import "figterm.proto";
import "local.proto";

message Hostbound {
  string session_id = 1;

  oneof submessage {
    local.EditBufferHook edit_buffer = 101;
    local.PromptHook prompt = 102;
    local.PreExecHook pre_exec = 103;
    local.PostExecHook post_exec = 108;
    local.InterceptedKeyHook intercepted_key = 104;

    fig.RunProcessResponse run_process_response = 105;
  }
}

message Clientbound {
  string session_id = 1;

  oneof submessage {
    figterm.InterceptRequest intercept = 100;
    figterm.InsertTextRequest insert_text = 101;
    figterm.SetBufferRequest set_buffer = 102;
    figterm.DiagnosticsRequest diagnostics = 103;
    figterm.InsertOnNewCmdRequest insert_on_new_cmd = 107;

    fig.ReadFileRequest read_file = 105;
  }
}
